# grok-multiagent-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_MARKETPLACE.md  CLAWHUB.md  INSTALL.md  LICENSE  README.md  TASKS.md  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tasks.md  tenma_analysis_report.md
.beads/: metadata.json
.claude-plugin/: marketplace.json
.claude/skills/grok-multi-agent-api/: SKILL.md
.github/workflows/: npm-publish.yml
scripts/: build.js  build.sh  install.sh  postinstall.js  preinstall-check.js  setup.sh  test.js  verify-release.js
skills/grok-refactor/: SKILL.md  openclaw.plugin.json
skills/grok-refactor/bridge/: cli.py  grok_bridge.py  usage_tracker.py
skills/grok-refactor/shared/: patterns.py
src/agent/: __init__.py  grok_agent.py
src/bridge/: apply.py  cli.py  grok_bridge.py  index.js  oauth_setup.py  usage_tracker.py
src/mcp/: __init__.py  __main__.py  grok_server.py  session.py
src/plugin/: grok_agent_plugin.ts  index.ts  openclaw.plugin.json  package.json
src/shared/: __init__.py  patterns.py
test/claude-integration/: REPORT.md  preflight.sh  test_edge_cases.py  test_modes.py  test_setup.py  test_tools.py
test/claude-integration/mock_responses/: annotated_code.txt  pgp_block.txt  text_only_analyze.txt
tests/: TEST_RESULTS.md
